# prefect-demo-flow

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
demo_flow/: cli.py  flow.py
tests/: test_demo_flow.py
