[tool.poetry]
name = "demo-flow"
version = "0.1.0"
description = ""
authors = ["Michael Ludwig <michael.ludwig@netlight.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prefect = {extras = ["aws", "viz"], version = "^0.13.5"}
pandas = "^1.1.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
demo-flow = "demo_flow.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
